# pyraf

./: .gitignore  .readthedocs.yaml  .travis.yml  CODE_OF_CONDUCT.md  Jenkinsfile  LICENSE.txt  MANIFEST.in  Makefile  Ptkplot.py  Ptogl.py  README  README.rst  RECON-INFO  TEST_COMMIT  __init__.py  alert.py  assert.py  binshelve.py  cdl.h  cdl.i  cdl_wrap.c  cgeneric.py  cl2py.py  clast.py  clcache.py  cllinecache.py  clparse.py  clscan.py  cltoken.py  compileallcl.py  defsetup.py  describe.py  dialog.py  dirdbm.py  dirshelve.py  distribute_setup.py  epar.py  eparoption.py  filecache.py  filedlg.py  (+62 more)
.github/workflows/: citest.yml
1_1/docs/: pyraf_install_src.ps
1_10dms/tools/: simple_api_calls.py
1_13dms/: defsetup.py
1_2/: MANIFEST.in
1_2/lib/: textattrib.py  urwutil.py
1_20dms/tools/: plotbench.py
1_7dms/tools/: cachecompare.py
2_1/lib/: gkigcur.py
2_10/lib/: iraf.py  splash.py
2_10/tools/: checkcompileall.py
2_11/lib/: gki_sys_tests.py  pyrafTk.py
2_12/lib/: filecache.py  gkitkbase.py  gkitkplot.py  irafecl.py  irafexecute.py  newWindowHack.py  pycmdline.py
2_12/tools/: cachesearch.py
2_14/lib/: dirdbm.py
2_14/tools/: cachecompare.py
2_16/lib/: cl2py.py
2_3/lib/: generic.py
2_4/lib/: ipython_api.py
2_5/lib/: urwfiledlg.py
2_6/lib/: irafimport.py  iraftask.py
2_6/tools/: fixcache.py
2_7/data/: epar.optionDB
2_7/lib/: dirshelve.py  graphcap.py  irafpar.py
2_8/lib/: aqutil.py  clast.py  describe.py
3_1/docs/: ipython_notes.txt
3_1/lib/: cllinecache.py  gki.py
3_10/lib/: gwm.py  irafcompleter.py
3_10dms/scripts/: pyraf
3_1dms/src/: xutil.c
3_1dms/tools/: plotbench.py
3_2/lib/: Ptkplot.py
3_3/: defsetup.py
3_3/lib/: generic.py
3_3dms/trunk/: new_setup.py
3_4/lib/: dirshelve.py  irafexecute.py  irafukey.py  wutil.py
3_4dms/: new_setup.cfg
3_4dms/src/: sscanfmodule.c
3_5/lib/: gkitkplot.py
3_6dms/tools/: createTarBall.csh
3_7dms/lib/: pyraf_setup.py
3_8/lib/: aqutil.py  clparse.py  irafimcur.py  pseteparoption.py  pyrafTk.py
3_9/: README
3b_1/: defsetup.py
3b_1/lib/: describe.py  gkitkplot.py  irafcompleter.py  subproc.py
3b_1/tools/: cachecompare.py
3b_2/lib/: aqutil.py
3b_3/lib/: irafinst.py
3b_3/tools/: fixcache.py
3b_4/lib/: cl2py.py  irafecl.py  newWindowHack.py  pyraf  pyrafglobals.py
3b_5/lib/: GkiMpl.py  gkicmd.py  ipython_api.py  msgiobuffer.py
4_3dms/lib/: pyraf
4_4dms/lib/: gkigcur.py
4a_1/lib/: cl2py.py  gkigcur.py
4a_12dms/tools/: subproc_Ph.py
4a_1dms/lib/: irafinst.py
4a_2/lib/: epar.py  iraftask.py
4a_2dms/: setup.py
4a_2dms/lib/: clcache.py
4a_3/lib/: wutil.py
4a_3dms/lib/: __init__.py  gkiiraf.py  urwutil.py
4a_4/lib/: gkitkbase.py
4a_4dms/lib/: gki.py  irafpar.py  pycmdline.py  pyraf  subproc.py
4a_4dms/scripts/: pyraf
4a_5dms/: README  shortcut.vbs
4a_5dms/lib/: GkiMpl.py  ipython_api.py
4a_9dms/: defsetup.py
clcache/: .dummy.txt
data/: PyRAF_exe.was  dbcopy  ipythonrc-pyraf
data/clcache/: +4CBmmvoaDLSEeeQiK0DWA==  +AWnNltWb6Z1xJ2Ys+j9ZA==  +C5pBwtf87lGlmwmPKW9Vg==  +MXfan0mUeT+BHHmh7moOg==  +Rh-OmlUNj3KjS8RZ5OQMw==  +SoDz8J9650sdd4laJL8qA==  +ew4nniuDYKddkRkEgg-zw==  +fHmvbRuAEtpz-I3cHyJAQ==  +ja1yiwdV3OFqidzMBE-oQ==  +pNy0iNoVaXPZ1JGfCMM0A==  +so6REzjsdkKd8x+k5Oyyg==  +uUaHcjW1v6X3gEbzHCYmA==  -0Yi9QJLnYHpoXbZQhgo5g==  -1MuwCWLx4mw9bTHyxJM4w==  -4pUM-m49Sf7WNZms9Macg==  -7Ils1OrJKldH3AwWqAvKA==  (+993 more)
docs/: conf.py  ecl.html  index.rst  ipython_notes.txt  pyraf_tutorial.rst  teal_guide.rst
lib/: GkiMpl.py  MplCanvasAdapter.py  Ptkplot.py  Ptogl.py  __init__.py  alert.py  aqutil.py  cgeneric.py  cl2py.py  clast.py  clcache.py  cllinecache.py  clparse.py  clscan.py  cltoken.py  dialog.py  dirdbm.py  dirshelve.py  epar.py  eparoption.py  filecache.py  filedlg.py  fontdata.py  generic.py  gki.py  gki_psikern_tests.py  gki_sys_tests.py  gkicmd.py  gkigcur.py  gkiiraf.py  gkiopengl.py  gkitkbase.py  gkitkplot.py  graphcap.py  gwm.py  ipython_api.py  iraf.py  irafcompleter.py  irafdisplay.py  irafecl.py  (+33 more)
pyraf/: GkiMpl.py  MplCanvasAdapter.py  Ptkplot.py  __init__.py  __main__.py  aqutil.py  cgeneric.py  cl2py.py  clast.py  clcache.py  cllinecache.py  clparse.py  clscan.py  cltoken.py  describe.py  dirdbm.py  dirshelve.py  epar.optionDB  epar.py  filecache.py  fill_clcache.py  fontdata.py  generic.py  gki.py  gkicmd.py  gkigcur.py  gkiiraf.py  gkitkbase.py  gkitkplot.py  graphcap.py  gwm.py  ipython_api.py  iraf.py  irafcompleter.py  irafdisplay.py  irafecl.py  irafexecute.py  iraffunctions.py  irafgwcs.py  irafhelp.py  (+27 more)
scripts/: pyraf  runpyraf.py
src/: sscanfmodule.c  togl.h  xutil.c
tests/: conftest.py  test_basic.py  test_clcache.py  test_cli.py  test_core_nongraphics.py  test_describe.py  test_graphics.py  test_invocation.py  test_using_tasks.py  utils.py
tools/: cachecompare.py  cachesearch.py  checkcompileall.py  compileallcl.py  createTarBall.csh  fixcache.py  loadall.py  plotbench.py  simple_api_calls.py  subproc_Ph.py  test_usage.csh  test_usage.save
(+594 files in other folders)
