[metadata]
name = pyraf
version = 2.1.15
author = Rick White, Perry Greenfield, Chris Sontag
url = https://iraf-community.github.io/pyraf.html
description = Pythonic interface to IRAF that can be used in place of the existing IRAF CL
long_description = file:README.rst
requires-python = >=2.7
classifiers =
	Intended Audience :: Science/Research
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = pyraf
scripts = scripts/pyraf
tests_require = pytest six
use_2to3=True
zip_safe=False
    
[options.package_data]
pyraf = blankcursor.xbm, epar.optionDB, pyraflogo_rgb_web.gif, ipythonrc-pyraf


[extension=pyraf.xutil]
sources = src/xutil.c
libraries = X11
#optional = True
#fail_message = If this is Windows, it is ok.

[tool:pytest]
minversion = 3.0
addopts = -s
testpath = tests

[flake8]
ignore = 

[yapf]
based_on_style = google
column_limit = 79
