[metadata]
name = pyraf
author = Rick White, Perry Greenfield, Chris Sontag
url = https://iraf-community.github.io/pyraf.html
description = Pythonic interface to IRAF that can be used in place of the existing IRAF CL
long_description = file:README.rst
requires-python = >=3.0
classifiers =
	Intended Audience :: Science/Research
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Software Development :: Libraries :: Python Modules

[options]
setup_requires =
    setuptools
    setuptools_scm
install_requires =
    numpy
    astropy
    stsci.tools>=4.0.1
packages =
    pyraf
    pyraf/tests
tests_require = pytest
zip_safe = False

[options.entry_points]
console_scripts =
    pyraf = pyraf:main

[options.package_data]
pyraf = blankcursor.xbm, epar.optionDB, pyraflogo_rgb_web.gif, ipythonrc-pyraf
pyraf/tests = data/*

[tool:pytest]
minversion = 3.0
addopts = -s

[flake8]
ignore = 

[yapf]
based_on_style = google
column_limit = 79

[coverage:run]
source = pyraf
omit =
  pyraf/tests/*
