[metadata]
name = pyraf
author = Rick White, Perry Greenfield, Chris Sontag
url = https://iraf-community.github.io/pyraf.html
description = Pythonic interface to IRAF that can be used in place of the existing IRAF CL
long_description = file:README.rst
long_description_content_type = text/x-rst
keywords = astronomy, astrophysics, utility
edit_on_github = True
github_project = iraf-community/iraf
platform = any
license = BSD 3-Clause
license_file = LICENSE.txt
classifiers =
	Intended Audience :: Science/Research
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Scientific/Engineering :: Astronomy

[options]
setup_requires = setuptools_scm
install_requires =
    numpy
    stsci.tools>=4.0.1
packages =
    pyraf
    pyraf/tests
zip_safe = False
python_requires = >=3.6

[options.extras_require]
docs =
    sphinx
    numpydoc
    astropy-sphinx-theme
test =
    pytest
    astropy

[options.entry_points]
console_scripts =
    pyraf = pyraf:main

[options.package_data]
pyraf = blankcursor.xbm, epar.optionDB, pyraflogo_rgb_web.gif, ipythonrc-pyraf
pyraf/tests = data/*

[tool:pytest]
minversion = 3.0
addopts = -s

[flake8]
ignore = 

[yapf]
based_on_style = google
column_limit = 79

[coverage:run]
source = pyraf
omit =
  pyraf/tests/*
